<resources>
    <string name="app_name">todolist_desafiofinal_v2</string>
    <string name="label_title_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_edit_task">Editar Tarefa</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops!Você não \npossui nenhuma tarefa.</string>
</resources>